[project]
name = "llmreview"
version = "0.1.0"
description = "CLI tool for LLM-based code reviews between git branches"
readme = "README.md"
authors = [{name = "Prakash Gyan", email = "prakash.gyan@frieslandcampina.com"}]
requires-python = ">=3.12"
dependencies = [
    "openai",
    "python-dotenv"
]

[project.scripts]
code-review = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"